[gd_scene load_steps=3 format=3 uid="uid://ddnoc1n4uuoox"]

[ext_resource type="Script" path="res://addons/tattomoosa/git_submodule_plugin/src/editor/git_submodule_plugin_settings.gd" id="1_cogpm"]
[ext_resource type="PackedScene" uid="uid://ytilv01f7rgb" path="res://addons/tattomoosa/git_submodule_plugin/src/editor/git_submodule_plugin_form.tscn" id="1_o4mip"]

[node name="GitSubmodulePlugins" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cogpm")
git_submodule_plugin_form = ExtResource("1_o4mip")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Git Submodule Plugins"

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="Button2" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Remove Untracked"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="FormList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Button" to="." method="add_row"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Button2" to="." method="remove_untracked"]
